Update Gesture procedures